--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -21,11 +21,14 @@
 
 .navbar__logo{
    align-self: flex-end;
+   flex:1;
 }
 
 .navbar__logo img{
    height:65px;
    width:auto;
+   display:block;
+   margin: 0 auto;
 }
 
 .navbar__nav-left ul li, .navbar__nav-right ul li{
@@ -77,7 +80,7 @@
 
     .navbar__icon{
         display: block;
-        align-self: flex-end;
+        align-self: center;
         flex:0;
     }
     .navbar__nav-left, .navbar__nav-right{
